feat:enhance homepage with Google Fonts and animations; add welcome section to page 3

--- a/index.html
+++ b/index.html
@@ -4,31 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spy x Family Hero Sections</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
 
+  <!-- CSS File (Make sure this path is correct) -->
+  <link rel="stylesheet" href="./assets/css/style.css" />
+
+  <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
+
+<!-- This class triggers the background in CSS -->
 <body class="homepage">
 
+  <!-- Header/Nav -->
   <header class="navbar">
     <div class="logo">
       <img src="./assets/img/logo.jpg" alt="Spy x Family Logo" class="logo-img">
       <span>SPY <span class="logo-x">x</span> FAMILY</span>
     </div>
+
     <nav class="nav-right">
-      <a href="./pages/page1/index.html"><i class="fas fa-star"></i>Hero 1</a>
-      <a href="./pages/page2/index.html"><i class="fas fa-shield-heart"></i>Hero 2</a>
-      <a href="./pages/page3/index.html"><i class="fas fa-bolt"></i>Hero 3</a>
-      <a href="./pages/page4/index.html"><i class="fas fa-fire"></i>Hero 4</a>
-      <a href="./pages/page5/index.html"><i class="fas fa-mask"></i>Hero 5</a>
+      <a href="./pages/page1/index.html"><i class="fas fa-star"></i> Hero 1</a>
+      <a href="./pages/page2/index.html"><i class="fas fa-shield-heart"></i> Hero 2</a>
+      <a href="./pages/page3/index.html"><i class="fas fa-bolt"></i> Hero 3</a>
+      <a href="./pages/page4/index.html"><i class="fas fa-fire"></i> Hero 4</a>
+      <a href="./pages/page5/index.html"><i class="fas fa-mask"></i> Hero 5</a>
     </nav>
   </header>
 
-  <div class="page-content">
-  </div>
+  <!-- Optional Main Content -->
+ <div class="page-content">
+  <h1>Welcome to Spy x Family Hero Sections</h1>
+  <p class="homepage-info p1">Ken Ehlvert E. Bacay</p>
+  <p class="homepage-info p2">WD-Seatwork-2</p>
+  <p class="homepage-info p3">TC05</p>
+</div>
 
+  <!-- Footer -->
   <footer class="footer">
     <p>&copy; All Rights Reserved 2025</p>
   </footer>
