--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -12,13 +12,11 @@
 
   <!-- Navbar -->
   <header class="navbar">
-    <!-- Left: Logo -->
     <div class="logo">
       <img src="../../assets/img/logo.jpg" alt="Spy x Family Logo" class="logo-img" />
       <span>SPY <span class="logo-x">x</span> FAMILY</span>
     </div>
 
-    <!-- Center: Main Nav -->
     <nav class="nav-center">
       <a href="#">How it works</a>
       <a href="#">Find savings</a>
@@ -26,7 +24,6 @@
       <a href="#">Vlog</a>
     </nav>
 
-    <!-- Right: Auth Buttons -->
     <div class="nav-right">
       <a href="#">Log In</a>
       <a href="#">Sign Up</a>
@@ -36,14 +33,42 @@
   <!-- Hero Section -->
   <section class="hero hero2">
     <div class="hero-overlay">
+      <!-- Loid Forger Image -->
       <div class="hero-image-container">
         <img src="./assets/img/loid-removebg-preview.png" alt="Loid Forger" class="hero-image" />
       </div>
-      <div class="hero-text-overlay one-line">
-        <h1>“I’ll make this family work. No matter what it takes.”</h1>
-        <p>– Loid Forger</p>
-        <a href="../../index.html" class="btn">Back to Home</a>
+
+      <!-- Text Wrapper -->
+      <div class="hero-text-wrapper">
+        <!-- Quote in Shadow Box -->
+        <div class="hero-text-overlay one-line">
+          <h1>“I’ll make this family work. No matter what it takes.”</h1>
+          <p>– Loid Forger</p>
+        </div>
+
+        <!-- Additional Info Below -->
+        <div class="extra-info">
+          <p><strong>Spy x Family</strong> is a hit anime blending espionage, comedy, and action.</p>
+          <p>A spy, an assassin, and a telepath form a pretend family with real challenges.</p>
+          <a href="../../index.html" class="btn">Back to Home</a>
+        </div>
       </div>
+    </div>
+  </section>
+
+  <!-- 🔽 Features Section (Budgets, All-in-one, Credit) -->
+  <section class="features">
+    <div class="feature">
+      <h3>Budgets? You betcha</h3>
+      <p>Effortlessly create budgets that are easy to stick to. We even make a few for you.</p>
+    </div>
+    <div class="feature">
+      <h3>All-in-one? Done</h3>
+      <p>From money and budgeting to customized tips and more — get a clear view of your total financial life.</p>
+    </div>
+    <div class="feature">
+      <h3>Credit? Checked</h3>
+      <p>Find out yours and learn how you can improve it. It's totally free.</p>
     </div>
   </section>
 
@@ -54,4 +79,3 @@
 
 </body>
 </html>
-
