refactor: Implement code structure updates and remove redundant sections

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -2,27 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Spy x Family - Welcome</title>
-  <link rel="stylesheet" href="./assets/css/alt-style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spy x Family - Hero 3</title>
+  <link rel="stylesheet" href="../../assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 </head>
-<body class="alt-homepage">
+<body>
 
-  <div class="logo-container">
-    <img src="./assets/img/logo.jpg" alt="Spy x Family Logo" class="logo-img">
-    <h1>SPY <span class="logo-x">x</span> FAMILY</h1>
-  </div>
+  <!-- Navbar -->
+  <header class="navbar">
+    <div class="navbar-container">
+      <!-- Logo (left side) -->
+      <div class="logo">
+        <img src="../../assets/img/logo.jpg" alt="Spy x Family Logo" class="logo-img" />
+        <span>SPY <span class="logo-x">x</span> FAMILY</span>
+      </div>
 
-  <section class="welcome">
-    <h2>Welcome to the Alternate Universe</h2>
-    <p>Discover new stories. Explore secret lives.</p>
-    <a href="./index.html" class="btn">Back to Main Homepage</a>
+      <!-- All Buttons (right side) -->
+      <div class="nav-right-side">
+        <nav class="nav-links">
+          <a href="#">For Home</a>
+          <a href="#">For Business</a>
+          <a href="#">For Customers</a>
+          <a href="#">Our Story</a>
+        </nav>
+        <div class="nav-auth">
+          <a href="#">Log In</a>
+          <a href="#">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero Section - Yor as Background -->
+  <section class="hero3">
+    <div class="hero3-container">
+      <div class="hero3-text">
+        <h1>YOR FORGER</h1>
+        <p>The Assassin</p>
+        <p><strong>Spy x Family</strong>'s Thorn Princess is both fierce and full of heart.</p>
+        <p>Yor balances her double life as an assassin and a mother in a fake family with real feelings.</p>
+        <a href="../../index.html" class="btn">Back to Home</a>
+
+        <!-- Home / Business Options -->
+        <div class="tab-section">
+          <div class="tab-box fade-in-left">
+            <a href="#" class="tab active">I have a home.</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+          <div class="tab-box fade-in-right">
+            <a href="#" class="tab">I have a business.</a>
+            <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
+  <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Spy x Family Fan Project</p>
+    <p>&copy; All Rights Reserved 2025</p>
   </footer>
 
 </body>
